Add changes for Vercel build fix

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-PORT=8000
-MONGODB_URI=mongodb://127.0.0.1:27017
+# PORT=8000
+# MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_URI=mongodb+srv://ayushtripathikanpur_db_user:AXv5Sk6BwoNzIUTb@unfiltered-money-dashbo.f1a7nen.mongodb.net/unfiltered_money_dashboard?retryWrites=true&w=majority&appName=unfiltered-money-dashboard
+
 CORS_ORIGIN=*
 JWT_SECRET=yourSuperSecretKey
