--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@
 # MONGODB_URI=mongodb://127.0.0.1:27017
 MONGODB_URI=mongodb+srv://ayushtripathikanpur_db_user:AXv5Sk6BwoNzIUTb@unfiltered-money-dashbo.f1a7nen.mongodb.net/unfiltered_money_dashboard?retryWrites=true&w=majority&appName=unfiltered-money-dashboard
 
-CORS_ORIGIN=*
+CORS_ORIGIN=https://unfiltered-money-dashboard-s-fronte-seven.vercel.app
 JWT_SECRET=yourSuperSecretKey
